cabal-version:      2.4
name:               haskell
version:            0.1.0.0

synopsis: Everybody codes - The Kingdom of Algorithmia (2024) solutions.
description: Haskell solutions for Everybody codes - The Kingdom of Algorithmia (2024).

common quest
    build-depends:
        base == 4.*,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language:   Haskell2010
    default-extensions: NumericUnderscores, TypeApplications, TupleSections
    other-modules:      Common

library
    exposed-modules:  Common
    build-depends:    base == 4.*, containers
    default-language: Haskell2010

executable 01
    import:  quest
    main-is: Quest01.hs
